# headache-jornal-server

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: config.py  dependencies.py  main.py  models.py  settings.yaml  tortoise_config.py  utils.py
src/db/: enums.py  models.py
src/migrations/models/: 0_20231003110956_init.py  0_20231007165439_init.py  1_20231003130336_add min value validator.py  1_20231007175930_change password lenght.py  2_20231015224355_remove auto_now_add.py
src/routers/: drink.py  food.py  headache.py  remedy.py  sessions.py  stats.py
